[project]
name = "surakarta-gym-env"
version = "0.1.0"
description = "Gym for Surakarta Board game"
authors = [
    {name = "alamhanz", email = "alamhanz@gmail.com"},
]
# Core dependencies
dependencies = [
    "numpy>=1.26.4",
    "gymnasium",
]

requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
